# logeverything

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  release-please-config.json  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: dashboard-ci.yml  dashboard-release.yml.disabled  python-ci.yml  release-please.yml  release.yml  sync-public.yml
benchmarks/: README.md  _profile_hotpath.py  async_logging.py  baseline.json  check_baseline.py  compare.py  context_managers.py  core_logging.py  decorators.py  external_loggers.py  optimize.py  print_capture.py  requirements.txt  run_benchmarks.py  test_integration.py  utils.py  visualize.py
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  tutorial.rst
examples/: README.md
examples/01_getting_started/: README.md  advanced_example.json  basic_usage.py  cheatsheet.py  logger_creation_methods.py  logger_creation_shared.py  modernized_usage.py  simple_visual_alignment.py  simplified_config_example.py  simplified_imports.py  special.json  unified_logger_example.py
examples/02_core_features/: README.md  app_config.txt  comprehensive_decorators_example.py  custom_handlers_example.py  decorator_enhancement_examples.py  decorator_visual_alignment.py  hierarchy_fields_example.py  logger_hierarchy_example.py  print_capture_example.py  profiles_demo.py  rotation_handlers_example.py  smart_decorator_basic.py  smart_decorator_example.py  visual_formatting_example.py  visual_vs_standard_comparison.py
examples/03_async_logging/: README.md  async_context_demo.py  async_context_explanation.py  async_context_test.py  async_log_class_example.py  async_web_app_example.py  high_performance_async_example.py  logger_comparison.py
examples/04_async_services/: clean_async_services.py  minimal_clean_example.py  production_grade_example.py
examples/04_context_managers/: README.md  advanced_context_managers_example.py  context_managers_comprehensive.py  context_managers_example.py  django_context_managers.py  fastapi_context_managers.py  pytorch_context_managers.py  sqlalchemy_context_managers.py  tensorflow_context_managers.py
examples/05_web_frameworks/: README.md  django_integration.py  fastapi_example.py  fastapi_integration.py  fastapi_integration_example.py  flask_integration_contexts.py
examples/06_data_science/: data_science_pipeline_example.py  datascience_contexts.py  datascience_pipeline.py
examples/07_integrations/: common_loggers_configuration.py  external_loggers_example.py  integration_demo.py  monitoring_integration_example.py
examples/08_advanced/: README.md  base_logger_architecture.py  intelligent_type_casting.py  intelligent_type_casting_demo.py  modernized_usage.py  multi_level_visual_alignment.py  optional_dependencies_example.py  production_logging_architecture.py  simple_type_casting_demo.py
examples/09_migration/: fixed_async_services.py
logeverything/: __init__.py  __main__.py  cli.py  core.py  correlation.py  hierarchy.py  indent_manager.py  logger.py
logeverything-dashboard/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_dashboard.py
logeverything-dashboard/config/: settings.example.yaml
logeverything-dashboard/dashboard/: __init__.py  cli.py  compile_scss.py  config.py  connection_routes.py  connections.py  main.py  models.py  services.py  templates.py
logeverything-dashboard/dashboard/static/css/: main.css
logeverything-dashboard/dashboard/static/js/: charts.js  connections.js  dashboard.js  main.js  tree.js
logeverything-dashboard/dashboard/static/scss/: _animations.scss  _base.scss  _layout.scss  _utilities.scss  _variables.scss  main.scss
logeverything-dashboard/dashboard/static/scss/components/: _analytics.scss  _badges.scss  _buttons.scss  _cards.scss  _charts.scss  _connections.scss  _forms.scss  _header.scss  _logs_filter.scss  _modals.scss  _pagination.scss  _sidebar.scss  _tables.scss  _time_range.scss  _toast.scss  _trace.scss  _tree.scss
logeverything-dashboard/dashboard/static/scss/themes/: _dark.scss  _light.scss
logeverything-dashboard/dashboard/templates/: base.html  dashboard.html  logs.html  operations.html  overview.html  system.html
logeverything-dashboard/dashboard/templates/partials/: connection_modal.html  error.html  logs_list.html  logs_stats.html  logs_tree.html  monitoring_stats.html  operation_analytics.html  operations_list.html  operations_summary_card.html  system_detail.html  system_stats.html  trace_view.html
logeverything/asyncio/: __init__.py  async_logger.py  async_logging.py
logeverything/base/: __init__.py  base_logger.py
logeverything/capture/: __init__.py  print_capture.py
logeverything/contexts/: __init__.py  contexts.py
logeverything/transport/: tcp.py  (+4 more)
tests/: conftest.py  mock_huggingface.py  mock_libraries.py  multiprocess_helper.py  safe_shutdown.py  test_additional_integrations.py  test_async_logging.py  test_async_logging_enhanced.py  test_base_logger.py  test_basics.py  test_buffer.py  test_cli.py  test_configuration.py  test_contexts.py  test_core_enhanced.py  test_decorator_integration.py  test_decorator_logger_selection.py  test_decorators_enhanced.py  test_enhanced_visuals.py  test_environment_detection.py  test_external_loggers.py  test_fastapi_integration.py  test_handlers.py  test_integration_pipeline.py  test_intelligent_type_casting.py  test_jsonl_formatter.py  test_library_integrations.py  test_logger_class.py  test_logger_deletion_cleanup.py  test_mlflow_integration.py  test_monitoring_storage.py  test_print_capture.py  test_profiles.py  test_rotation_handlers.py  test_simplified_config.py  test_smart_decorator.py  test_thread_leak_detection.py  test_transport_http.py  test_transport_tcp.py  test_transport_udp.py  (+3 more)
tools/: benchmark_suite.py  generate_async_examples.py  generate_examples.py  generate_markdown_examples.py  run_integration_tests.py  test_thread_leak_fix.py  verify_threads.py
(+73 files in other folders)
