[build-system]
requires = ["setuptools>=61.0", "wheel>=0.38.0", "build>=0.8.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=logeverything --cov-report=xml:coverage.xml --cov-report=term -v"
markers = [
    "thread_sensitive: marks tests that are sensitive to thread leaks",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::UserWarning:pytest_asyncio.*",
    "ignore:setup_logging\\(\\) is deprecated:DeprecationWarning",
    "ignore:configure\\(\\) is deprecated:DeprecationWarning"
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
