[build-system]
requires = ["setuptools>=61.0", "wheel>=0.38.0", "build>=0.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logeverything"

version = "0.0.2"

description = "A comprehensive logging library for Python applications with minimal code changes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Ramish Siddiqui", email = "ramishsiddique46@gmail.com"},
]
keywords = ["logging", "log", "debug", "tracing", "performance", "monitoring", "visualization", "hierarchical", "decorators"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.6",
    "mypy>=0.971",
    "bandit>=1.7.0",
    "sphinx>=5.0.0",
    "furo>=2023.5.20",
    "sphinx-autodoc-typehints>=1.18.0",
    "myst-parser>=2.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
    "wheel>=0.38.0",
    "pre-commit>=3.3.2",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "furo>=2023.5.20",
    "sphinx-autodoc-typehints>=1.18.0",
    "myst-parser>=2.0.0",
]
full = [
    "rich>=10.0.0",
    "orjson>=3.5.0",
    "fastapi>=0.68.0",
    "httpx>=0.20.0",
    "requests>=2.25.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.8.0",
    "prometheus-client>=0.12.0",
    "elasticsearch>=7.0.0",
    "mlflow>=1.0.0",
    "pillow>=9.0.0",
]
web = [
    "fastapi>=0.68.0",
    "httpx>=0.20.0",
    "starlette>=0.14.0",
    "flask>=2.0.0",
    "django>=3.2.0",
]
fastapi = [
    "fastapi>=0.68.0",
    "httpx>=0.20.0",
    "starlette>=0.14.0",
]
flask = ["flask>=2.0.0"]
django = ["django>=3.2.0"]
visual = [
    "rich>=10.0.0",
    "pillow>=9.0.0",
]
json = ["orjson>=3.5.0"]
db = ["sqlalchemy>=1.4.0"]
metrics = ["prometheus-client>=0.12.0"]
ml = [
    "mlflow>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]
cloud = [
    "boto3>=1.17.0",
    "google-cloud-logging>=2.0.0",
    "azure-monitor-opentelemetry>=1.0.0",
]

[project.urls]
Documentation = "https://logeverything.readthedocs.io/"
Source = "https://github.com/RamishSiddiqui/logeverything"
Tracker = "https://github.com/RamishSiddiqui/logeverything/issues"


[tool.setuptools.packages.find]
exclude = ["tests", "docs", "examples", "tools"]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["logeverything"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "logeverything.transport.buffer"
warn_unreachable = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "colorama.*",
    "celery.*",
    "django.*",
    "psutil.*",
    "fastapi.*",
    "uvicorn.*",
    "starlette.*",
    "flask.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logeverything.integrations.celery"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "logeverything.monitoring.api_server"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "logeverything.capture.print_capture"
disable_error_code = ["assignment", "unreachable", "misc"]

[[tool.mypy.overrides]]
module = "logeverything.handlers.handlers"
disable_error_code = ["assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=logeverything --cov-report=xml:coverage.xml --cov-report=term -v"
asyncio_mode = "auto"
markers = [
    "thread_sensitive: marks tests that are sensitive to thread leaks",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "asyncio: mark tests as async"
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::UserWarning:pytest_asyncio.*",
    "ignore:setup_logging\\(\\) is deprecated:DeprecationWarning",
    "ignore:configure\\(\\) is deprecated:DeprecationWarning"
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
