[metadata]
name = logeverything
version = attr: logeverything.__version__
description = High-performance Python logging with decorators, async support, structured JSON output, and a companion monitoring dashboard
url = https://github.com/RamishSiddiqui/logeverything
keywords =
    logging
    logger
    decorator
    async
    structured logging
    json logging
    log rotation
    python logging
    function tracing
    monitoring
    observability
    debug
    correlation
    dashboard
long_description = file: README.md
long_description_content_type = text/markdown
author = Muhammad Ramish Siddiqui
author_email =
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Operating System :: OS Independent
    Framework :: AsyncIO
    Framework :: FastAPI
    Framework :: Flask
    Framework :: Django
    Environment :: Console
    Environment :: Web Environment
    Typing :: Typed
project_urls =
    Documentation = https://logeverything.readthedocs.io/
    Source = https://github.com/RamishSiddiqui/logeverything
    Tracker = https://github.com/RamishSiddiqui/logeverything/issues

[options]
packages = find:
python_requires = >=3.9
zip_safe = False
include_package_data = True
install_requires =
    colorama>=0.4.4

[options.package_data]
logeverything = py.typed

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
    isort>=5.10.0
    mypy>=0.971
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    build>=0.8.0
    twine>=4.0.0
    wheel>=0.38.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-asyncio>=0.21.0
docs =
    sphinx>=5.0.0
    furo>=2023.5.20
    myst-parser>=2.0.0
    sphinx-autodoc-typehints>=1.18.0
full =
    rich>=10.0.0
    orjson>=3.5.0
    fastapi>=0.68.0
    requests>=2.25.0
    sqlalchemy>=1.4.0
    pydantic>=1.8.0
    prometheus-client>=0.12.0
    elasticsearch>=7.0.0
    mlflow>=1.0.0
    pillow>=9.0.0
integrations =
    aiohttp>=3.7.0
celery =
    celery>=4.4.0
transport =
    aiohttp>=3.7.0
web =
    fastapi>=0.68.0
    starlette>=0.14.0
    flask>=2.0.0
    django>=3.2.0
visual =
    rich>=10.0.0
    pillow>=9.0.0
json =
    orjson>=3.5.0
cloud =
    boto3>=1.17.0
    google-cloud-logging>=2.0.0
    azure-monitor-opentelemetry>=1.0.0

[options.entry_points]
console_scripts =
    logeverything = logeverything.cli:main

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv
ignore = E203,W503,E704
per-file-ignores =
    __init__.py:F401
